--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <link rel="icon" href="%PUBLIC_URL%/images/logo.png">
+        <link rel="icon" href="%PUBLIC_URL%/images/icon.png">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#000000">
-        <meta name="description" content="Web site created using create-react-app">
-        <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/logo.png">
+        <meta name="description" content="Discover WindMusic, your premium YouTube Music crafted with Tailwind CSS. Experience seamless streaming, curated content, and a user-friendly interface. Embrace the future of online entertainment with WindMusic.">
+        <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/icon.png">
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
         <title>Wind Music</title>
     </head>
